--- a/css/muj.css
+++ b/css/muj.css
@@ -1,11 +1,15 @@
 nav a.navbar-brand img {
     width: 200px;
 }
-.bg-danger {
-    background-color: blue !important ;
-}
+
 .mojelogo {
 
  max-width: 40px;
     border: 5px solid crimson;
+}
+.tecky {
+    float: left;
+}
+.bg-info1 {
+    background-color: rgba(166, 159, 235, 0.72) !important;
 }
